support setting rgb state in api. simple websocket  for debugging grid

--- a/ledserver/lbcs/index.html
+++ b/ledserver/lbcs/index.html
@@ -1,11 +1,29 @@
 <html>
    <head>
       <title>{{ title }}</title>
+      <style>
+         .grid-container {
+            height: auto;
+            display: grid;
+            grid-template-columns: {% for i in range(cfg.columns) %}auto {% end %};
+         }
+         .grid-item {
+            outline: 1px solid rgb(145, 145, 145);
+         }
+      </style>
    </head>
    <body style="font-family: 'Courier New', Courier, monospace; text-align: center; background-color: rgb(159, 184, 231);">
        <h1>{{ header }}</h1>
        <img src={{ static_url("splash.png") }} width=500 height=500></img>
        <h4>Parsed Configuration</h4>
        <pre>{{ cfg.pretty() }}</pre>
+
+       <h4>Server grid state</h4>
+      <div class="grid-container">
+         {% for i in range(cfg.rows * cfg.columns) %}
+            <div class="grid-item" id="grid-item-{{ i }}" style="background-color: rgb{{ state[i] }};">{{ state[i] }}</div>
+         {% end %}
+      </div>
+      <script src={{ static_url("gridWebSocket.js") }}></script>
    </body>
  </html>
