--- a/ledserver/lbcs/index.html
+++ b/ledserver/lbcs/index.html
@@ -25,6 +25,6 @@
             <div class="grid-item" id="grid-item-{{ i }}" {% if state[i] != (0, 0, 0) %}style="background-color: rgb{{ state[i] }};"{% end %}}]>{{ computed_indices[i] }}</div>
          {% end %}
       </div>
-      <script src={{ static_url("gridWebSocket.js") }} allStateUrl={{ reverse_url("all_leds") }}></script>
+      <script src={{ static_url("gridWebSocket.js") }} allStateUrl={{ reverse_url("all_leds") }} websocketUrl={{ websocket_url }}></script>
    </body>
  </html>
