support bulk assign in all state handler

--- a/ledserver/lbcs/index.html
+++ b/ledserver/lbcs/index.html
@@ -18,7 +18,7 @@
        <h4>Parsed Configuration</h4>
        <pre>{{ cfg.pretty() }}</pre>
        <button class="reset-button" id='reset-button'>Reset</button>
-       <button class="fill-button" id='fill-button'>Fill</button>
+       <button class="fill-button" id='fill-button'>Random route</button>
        <h4>Server grid state</h4>
       <div class="grid-container">
          {% for i in range(cfg.rows * cfg.columns) %}
